<resources>
    <string name="app_name"><i>Bin Basket</i></string>
    <string name="pickaddress"><i>Pick a Address</i></string>
    <string name="addressconformation">Conform Address</string>
    <string name="listofitems"><b><u>Items:</u></b></string>
    <string name="placedon"><b><u>Placed on:</u></b></string>
    <string name="address"><i><b><u>Address:</u></b></i></string>
    <string name="select">Select</string>
    <string name="changepassword">Change Password</string>
    <string name="action_settings">Settings</string>
    <string name="rs">\u20B9 /kg</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="loginfacebook">Log In FaceBook</string>
    <string name="logingoogle">Log In Google</string>
    <string name="enteryourpassword">Enter your password</string>
    <string name="enteryourmail">Enter your Email </string>
    <string name="enteryourmobile">Enter your Mobile No</string>
    <string name="enteremailmobile">Enter your Email/Mobile No</string>
    <string name="enteryourfirstname">Enter your First Name</string>
    <string name="enteryourlastname">Enter your Last Name</string>
    <string name="newuser">New User? <u><b>Join today</b></u></string>
    <string name="skipiwilldouitlater"></string>
    <string name="alreadyauser">Already have a accont? <u><b>Login Now</b></u></string>
    <string name="byjoiningyouagree">By joining you agree to our terms and condition</string>
    <string name="fullname">Enter full name</string>
    <string name="enterpincode">Enter Pincode</string>
    <string name="addresslinefirst">Address line</string>
    <string name="addresslinesecond">Address line (optional)</string>
    <string name="landmark">Landmark (optional)</string>
    <string name="add">Add</string>
    <string-array name="listitemname">
        <item>Book</item>
        <item>Paper</item>
        <item>Plastic</item>
        <item>Iron</item>
        <item>Aluminium</item>
        <item>Copper</item>
        <item>Steel</item>
        <item>Cartoon</item>
        <item>Tin</item>
        <item>Battery</item>
        <item>Tetra Pack</item>
    </string-array>
    <string-array name="listitemprice">
        <item>07.00</item>
        <item>10.00</item>
        <item>16.00</item>
        <item>15.00</item>
        <item>100.00</item>
        <item>300.00</item>
        <item>28.00</item>
        <item>10.00</item>
        <item>08.00</item>
        <item>40.00</item>
        <item>16.00</item>
    </string-array>
    <integer-array name="listitemimages">
        <item>@drawable/ic_book</item>
        <item>@drawable/ic_newspaper_clip_art_xcgggrdca</item>
        <item>@drawable/ic_plastic</item>
        <item>@drawable/ic_iron</item>
        <item>@drawable/ic_aluminium</item>
        <item>@drawable/ic_copper</item>
        <item>@drawable/ic_steel</item>
        <item>@drawable/ic_carton</item>
        <item>@drawable/ic_mud_tire_clipart_1</item>
        <item>@drawable/ic_tin_cans_square_metal_16880689</item>
        <item>@drawable/ic_battery1</item>
        <item>@drawable/ic_tetra_pack</item>
        <item>@drawable/ic_steel</item>
    </integer-array>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >My Order</item>
        <item >My Account</item>
        <item >My Bag</item>
        <item >Follow on Facebook</item>
        <item >Share the app</item>
        <item >Rate Us</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_login_logo</item>
        <item>@drawable/ic_fb_icon_325x325</item>
        <item>@drawable/ic_share_this_app</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>
