<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:padding="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add a new\nAddress"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/fullname"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_profile_pic"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/mobileNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourmobile"
                android:inputType="phone"
                android:textStyle="normal"
                android:maxLength="10"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_mobile_icon"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:maxLength="6"
                android:hint="@string/enterpincode"
                android:inputType="number"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_pincode"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/addresslineone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/addresslinefirst"
                android:textColorHint="@color/hint"
                android:singleLine="true"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_home"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/addresslinetwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/addresslinesecond"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_home"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/landmark"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_landmark"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingBottom="4dp">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="9">
        <Button
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/login_button"
            android:text="@string/add"
            android:onClick="addAddress"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="6dp">
    </RelativeLayout>
</LinearLayout>
