<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="27">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login to BinBasket"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/fb"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="#416BC1"
                android:text="@string/loginfacebook"
                android:textColor="#ffffff"
                android:textStyle="bold" >
                <requestFocus/>
                </Button>

        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
        <FrameLayout
            android:id="@+id/FrameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/google"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_light"
                android:text="@string/logingoogle"
                android:textColor="#ffffff"
                android:textStyle="bold" >
                <requestFocus/>
            </Button>

        </FrameLayout>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/hint"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourmobile"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="16sp"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_email_icon_hi"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourpassword"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_password"/>
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Forgot your password?"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:textColor="@color/hint"
            android:onClick="forgotPassword"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="9">
        <Button
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:onClick="logIn"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/newuser"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:onClick="joinToday"
            android:textColor="@android:color/holo_purple"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/hint"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text="Skip I'll do it later"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/hint"
            android:onClick="skipItIwillDoItLater"/>
    </RelativeLayout>
</LinearLayout>
